--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,11 @@
-fastapi==0.52.0
-pymongo==4.3.3
-uvicorn==0.22.0
+fastapi==0.80.0
+uvicorn==0.18.3
+opencv-python==4.2.0
+numpy==1.21.6
+mongoengine==0.27.0
 PyJWT==2.7.0
-pydantic
-mongoengine
+Pillow==9.2.0
+pilgram==1.2.1
+tensorflow==2.6.2
+pydantic==1.10.2
+typing
