--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.7.0",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
+    "react-avatar-editor": "^13.0.0",
+    "react-cropper": "^2.3.3",
     "react-dom": "^18.2.0",
+    "react-image-crop": "^10.1.5",
     "react-particles": "^2.11.0",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "tsparticles-engine": "^2.11.0",
     "tsparticles-preset-links": "^2.11.0",
